@@ -16,7 +16,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import zookeeper, zktestbase, unittest, threading
+import zookeeper, zktestbase, unittest, threading, sys
+if sys.version_info < (3,):
+	range = xrange
+
 ZOO_OPEN_ACL_UNSAFE = {"perms":0x1f, "scheme":"world", "id" :"anyone"}
 
 class GetSetTest(zktestbase.TestBase):
@@ -84,7 +87,7 @@ class GetSetTest(zktestbase.TestBase):
         1Mb with default parameters (depends on ZooKeeper server).
         """
 
-        data = ''.join(["A" for x in xrange(1024*1023)])
+        data = ''.join(["A" for x in range(1024*1023)])
         self.ensureDeleted("/zk-python-test-large-datanode")
         zookeeper.create(self.handle, "/zk-python-test-large-datanode", data,
                          [{"perms":0x1f, "scheme":"world", "id" :"anyone"}])
